--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <title>Light AI</title>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="logo.gif" type="image/x-icon">
+    <link rel="shortcut icon" href="logo.gif" type="image/x-icon">
+                                                                                                                                    
 </head>
 <body>
     <div id="video-container">
