--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <h5> "Our ideas, designs, technology, and strategies are vigorously protected by the full force of the law. Any unauthorized use, reproduction, or infringement will be met with swift and decisive legal action." </h5>
         </div>
         <div id="social-icons">
-            <a href="https://www.linkedin.com/company/your-linkedin-page" target="_blank" rel="noopener">
+            <a href="https://www.linkedin.com/company/lightai-in/">
                 <img src="linkedin.png" alt="LinkedIn">
             </a>
         </div>
