--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <h1>LIGHT</h1>
         </div>
         <div id="future-work">
-            <p> Future of work </p>
+            <p> Future Of Work </p>
         </div>
         <div id="april">
             <p> 1.4.24 </p>
